--- a/task_02_11.ipynb
+++ b/task_02_11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtoMcp3+I5TdbpGqcec+54",
+      "authorship_tag": "ABX9TyNxU0ly3j099+d4+E1h6UmC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQM5nZ6UjVRV",
-        "outputId": "289b4679-de44-4efa-9837-6497099dd6e3"
+        "outputId": "d620652f-f662-46cb-ae78-7f0c53f171ae"
       },
       "outputs": [
         {
@@ -44,20 +44,12 @@
             "start = 100\n",
             "k = 7\n",
             "s = 9\n",
-            "117\n",
-            "207\n",
-            "297\n",
-            "387\n",
-            "477\n",
-            "567\n",
-            "657\n",
-            "747\n",
-            "837\n",
-            "927\n"
+            "117 207 297 387 477 567 657 747 837 927 "
           ]
         }
       ],
       "source": [
+        "\n",
         "# Задание task_02_11.\n",
         "#\n",
         "# Выполнил: Шокиров Е.Р.\n",
@@ -74,7 +66,7 @@
         "  start += 1\n",
         "  if start%10==k and start%9==0:\n",
         "    n_count += 1\n",
-        "    print(start)\n",
+        "    print(start, end =' ')\n",
         "\n",
         "\n",
         "\n",
